--- a/deploy.yml
+++ b/deploy.yml
@@ -6,7 +6,7 @@
   tasks:
     - name: Pull Docker Image
       docker_image:
-        name: "veerendragoudatp10/calculator"
+        name: "veerendragoudatp10/calculator:latest"  # Include the tag here
         source: pull
       register: docker_pull_result
 
@@ -19,4 +19,4 @@
         name: docker
         state: started
     - name: Running container
-      shell: docker run -it -d --name calculator veerendragoudatp10/calculator
+      shell: docker run -it -d --name calculator veerendragoudatp10/calculator:latest  # Include the tag here as well
