--- a/deploy.yml
+++ b/deploy.yml
@@ -24,5 +24,11 @@
         name: docker
         state: started
 
+    - name: Stop and remove existing container
+      docker_container:
+        name: calculator
+        state: absent
+      ignore_errors: true
+
     - name: Running container
       shell: docker run -it -d --name calculator veerendragoudatp10/calculator:latest
